--- a/.config/i3/config
+++ b/.config/i3/config
@@ -61,15 +61,15 @@ exec --no-startup-id "pgrep i3mpdupdate || i3mpdupdate"
 #set $netrefresh --no-startup-id sudo rc-service NetworkManager restart
 
 #RUNIT
-#set $shutdown sudo shutdown -h now
-#set $reboot sudo reboot
-#set $netrefresh --no-startup-id sudo sv restart NetworkManager
-
-#SYSTEMD
 set $shutdown sudo shutdown -h now
 set $reboot sudo reboot
-set $netrefresh --no-startup-id sudo systemctl restart NetworkManager
-set $hibernate sudo systemctl suspend
+set $netrefresh --no-startup-id sudo sv restart NetworkManager
+
+#SYSTEMD
+#set $shutdown sudo shutdown -h now
+#set $reboot sudo reboot
+#set $netrefresh --no-startup-id sudo systemctl restart NetworkManager
+#set $hibernate sudo systemctl suspend
 
 # #---Basic Bindings---# #
 bindsym $mod+Return 		exec $term
